# Avalon

./: .gitignore
AlvidLab1/: AlvidLab1.sln
AlvidLab1/AlvidLab1/: 1.txt  5.txt  7.txt  AlvidLab1.cpp  AlvidLab1.vcxproj  AlvidLab1.vcxproj.filters.txt  UC1.txt  UC3.txt  UC5.txt  UC7.txt
AlvidLab1/task2/: task2.cpp  task2.vcxproj
AlvidLab1/task3/: task3.cpp  task3.vcxproj
AlvidLab1/task4/: task4.cpp  task4.vcxproj  task4.vcxproj.filters
AlvidLab1/task5/: MtStack.hpp  task5.cpp  task5.vcxproj  task5.vcxproj.filters
AlvidLab2/AlvidLab2/: AlvidLab2.sln
AlvidLab2/AlvidLab2/Common/: Timeter.hpp
AlvidLab2/AlvidLab2/task1/: task1.cpp  task1.vcxproj
AlvidLab2/AlvidLab2/task2/: task2.cpp  task2.vcxproj
AlvidLab2/AlvidLab2/task3/: task3.cpp  task3.vcxproj
AlvidLab2/AlvidLab2/task4/: task4.cpp
AlvidLab2/AlvidLab2/task5/: Fifo.hpp  task5.cpp
AlvidLab2/AlvidLab2/task5_Fifo/: CMakeLists.txt  task5.cpp
AlvidLab2/AlvidLab2/task6/: task6.vcxproj
AlvidLab2/AlvidLab2/task6_Singleton/: task6.cpp
AlvidLab2/AlvidLab2/task7/: ThreadPool.hpp  task7.cpp  task7.vcxproj
AlvidLab3/: AlvidLab3.sln
AlvidLab3/Empty/: Consumer.cpp  Consumer.hpp  Empty.cpp  Empty.vcxproj  Producer.cpp  Producer.hpp  Store.cpp  Store.hpp
AlvidLab31/task2_Spinlock/: CMakeLists.txt  main.cpp
AlvidLab4/Empty/: CMakeLists.txt  Empty.cpp  Empty.vcxproj  Empty.vcxproj.filters  Store.cpp  Store.hpp  Types.hpp
Common/: Fifo.hpp  Spinlock.hpp  Timeter.cpp  Timeter.hpp
lab1/: Задание_Threads_2020.docx
lab2/: Задание_Blocking_2020.docx
lab3/: Задание_producer_consumer (2).docx
(+4 files in other folders)
